--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -1088,7 +1088,7 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-2a__wrapper {
-    /*-webkit-box-align: center;
+    -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
     display: -webkit-box;
@@ -1096,8 +1096,8 @@ section.complete .button-next-slide-section-2 {
     display: flex;
     margin-right: auto;
     margin-left: auto;
-    padding-left: 96px;
-    width: 1368px;*/
+    /*padding-left: 96px;*/
+    width: 1368px;
     width: 100%;
     height: 100%
 }
@@ -1109,7 +1109,23 @@ section.complete .button-next-slide-section-2 {
     float: left;
 }
 
+.section-2a__image{
+    width: 100%;
+    height: 100%;
+    background-image: url("https://saaf.mystagingwebsite.com/wp-content/uploads/2021/09/Marjie_Web-scaled.jpg");
+    background-position: 50%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+    -webkit-filter: grayscale(1);
+    filter: grayscale(1);
+    transition: all 4s;
+    transform: scale(1.025);
+
+}
+
 .section-2a__foto-wrapper__img {
+
     display: block;
     width: 100%;
     height: 100%;
@@ -1134,6 +1150,7 @@ section.complete .button-next-slide-section-2 {
     width: 460px;
     height: 600px;
     float: left;
+    overflow: scroll;
 }
 
 .section-2a__text__marjie-signature {
@@ -1154,6 +1171,7 @@ section.complete .button-next-slide-section-2 {
     background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0), #f4f4f4)
 }
 
+
 .section-2a__text,
 .section-20a__text,
 .section-29a__text,
@@ -1167,11 +1185,11 @@ section.complete .button-next-slide-section-2 {
 }
 
 .section-2a__text-overlay {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+
 
 }
 
@@ -2303,7 +2321,7 @@ html{
 .section-12__image .section-12__imageshorttext {
     position: absolute;
     left: 40px;
-    bottom: 23px;
+    bottom: 22px;
     font-family: Roboto-Regular, Arial, sans-serif;
     font-size: 14px;
     line-height: 20px;
@@ -3249,6 +3267,7 @@ html{
 
 .section-20a__image img {
     width: 100%;
+    height: 100%;
 }
 
 .section-20a__text-wrapper {
@@ -3585,6 +3604,7 @@ html{
 
 .section-23a__image img {
     width: 100%;
+    height: 100%;
 }
 
 .section-23a__imageshorttext {
@@ -3985,31 +4005,41 @@ html{
 }
 
 .section-27a__maincontent {
-    width: 70%;
+    width: 46%;
+    height: 100%;
+
 }
 
 .section-27a__image,
 .section-27a__text-wrapper {
     float: left;
-    width: 50%;
+    width: 80%;
 }
 
 .section-27a__image img {
-    width: 100%;
-    height: 100%
+    background-image: url("../images/section-27a.jpg");
+    background-position: 50%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+    position: absolute;
+    top: 50%;
+    width: 36%;
+    min-height: 100%;
+    transform: translateY(-50%);
 }
 
 .section-27a__text-wrapper {
     position: relative;
-    top: 12.5vh;
-    left: 5%;
     height: 80vh;
+    top: 12.5vh;
+    left: 91%;
 }
 
-/*.section-27a__text {*/
-/*    height: 100%;*/
-/*    overflow-y: scroll;*/
-/*}*/
+.section-27a__text {
+    height: 100%;
+    overflow-y: scroll;
+}
 
 .section-27a__text-shadow-after {
     content: "";
@@ -4032,18 +4062,15 @@ html{
     text-transform: uppercase
 }
 
-/*.section-27a__text p {*/
-/*    font-family: Whitman-Roman, Arial, sans-serif;*/
-/*    font-size: 15px;*/
-/*    line-height: 25px*/
-/*}*/
+
 
 .section-27a__quoter {
-    float: left;
-    margin-top: 25vh;
-    margin-left: 12.5%;
+    float: right;
+    top: 25em;
+    right: 8em;
     width: 144px;
     opacity: 1.0;
+    position: absolute;
 }
 
 .section-27a__quoter p {
@@ -4169,24 +4196,34 @@ html{
 }
 
 .section-28a__maincontent {
-    width: 70%;
+    width: 46%;
+    height: 100%;
 }
 
 .section-28a__image,
 .section-28a__text-wrapper {
     float: left;
-    width: 50%;
+    width: 80%;
 }
 
 .section-28a__image img {
-    width: 100%;
+    background-image: url("../images/section-28a.jpg");
+    background-position: 50%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+    position: absolute;
+    top: 50%;
+    width: 36%;
+    min-height: 100%;
+    transform: translateY(-50%);
 }
 
 .section-28a__text-wrapper {
-    height: 80vh;
     position: relative;
-    top: 12.5vh;
-    left: 10%;
+    height: 80vh;
+    top: 6.5vh;
+    left: 100%;
 }
 
 .section-28a__text {
@@ -4311,6 +4348,7 @@ html{
 }
 
 .section-29a {
+
     z-index: -8;
     position: relative;
     width: 100%;
@@ -4340,15 +4378,23 @@ html{
 
 
 .section-29a__image img {
-    width: 100%;
-    height: 100%;
+    background-image:url("../images/section-29a.jpg");
+    background-position: 50%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+    position: absolute;
+    top: 50%;
+    width: 36%;
+    min-height: 101%;
+    transform: translateY(-50%);
 }
 
 .section-29a__text-wrapper {
     position: relative;
     height: 80vh;
-    top: 12.5vh;
-    left: 5%;
+    top: 6.5vh;
+    left: 61%;
 }
 
 .section-29a__text-shadow-after {
@@ -4373,7 +4419,7 @@ html{
 .section-29a__quoter {
     float: left;
     margin-top: 25vh;
-    margin-left: 12.5%;
+    margin-left: 46.5%;
     width: 144px;
     opacity: 1.0;
 }
