--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -3621,7 +3621,7 @@ section.complete .button-next-slide-section-2 {
     width: 100%;
     height: 100%;
     background-color: #002a54;
-    background-image: url(../images/section-24-background.jpg);
+    /* background-image: url(../images/section-24-background.jpg); */
     background-position: 0% 38%;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
@@ -3679,7 +3679,7 @@ section.complete .button-next-slide-section-2 {
     width: 100%;
     height: 100%;
     background-color: #002a54;
-    background-image: url(../images/section-25-background.jpg);
+    /* background-image: url(../images/section-25-background.jpg); */
     background-position: 0% 38%;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
@@ -3918,12 +3918,13 @@ section.complete .button-next-slide-section-2 {
 
 .section-27__main-content img,
 .section-27__main-content .section-27__text {
-    width: 48%;
+    width: 32.3%;
     float: left;
 }
 
 .section-27__main-content img {
-    margin-right: 4%;
+    margin-right: 3.2%;
+    margin-left: 21.6%;
 }
 
 .section-27__text h3 {
