--- a/page-templates/09082021_v2/css/main.css
+++ b/page-templates/09082021_v2/css/main.css
@@ -777,7 +777,7 @@ body.page-loaded .section-1__image-1__wrapper {
 .section-1__image-1 {
     width: 100%;
     height: 100%;
-    background-image: url(../images/section-1-background.jpg);
+    /*background-image: url(../images/section-1-background.jpg);*/
     background-position: 50%;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
@@ -1150,7 +1150,7 @@ section.complete .button-next-slide-section-2 {
     width: 460px;
     height: 600px;
     float: left;
-    
+
 }
 
 .section-2a__text__marjie-signature {
@@ -2297,16 +2297,10 @@ html{
     height: 100%;
 }
 
-.section-12__image {
-    /*background-image: url(../images/section-12.jpg);
-    background-position: bottom;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover*/
-}
+
 
 .section-12__image img {
-    background-image: url("../images/section-12.jpg");
+
     background-position: 50%;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
@@ -2454,7 +2448,6 @@ html{
 
 
 .section-13__image img {
-    background-image: url("../images/section-13.jpg");
     background-position: 50%;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
@@ -2575,7 +2568,6 @@ html{
 }
 
 .section-14__image img {
-    background-image: url("../images/section-14.jpg");
     background-position: 50%;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
@@ -2708,7 +2700,6 @@ html{
 }
 
 .section-15__image img {
-    background-image: url("../images/section-15rev.jpg");
     background-position: 50%;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
